service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  type: NodePort
  selector:
    app: apple-app
  ports:
    - port: 5678 # Default port for image
